// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`migrate tCore resources test with no user resources 1`] = `
Array [
  "<HOME_DIR>/translationCore/resources/el-x-koine/bibles/ugnt",
  "<HOME_DIR>/translationCore/resources/el-x-koine/translationHelps/translationWords",
  "<HOME_DIR>/translationCore/resources/en/bibles/ult",
  "<HOME_DIR>/translationCore/resources/en/bibles/ust",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationAcademy",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationNotes",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationWords",
  "<HOME_DIR>/translationCore/resources/hbo/bibles/uhb",
  "<HOME_DIR>/translationCore/resources/hi/translationHelps/translationWords",
]
`;

exports[`migrate tCore resources test with old resources - should delete 1`] = `
Array [
  "<HOME_DIR>/translationCore/resources/el-x-koine/bibles/ugnt",
  "<HOME_DIR>/translationCore/resources/el-x-koine/translationHelps/translationWords",
  "<HOME_DIR>/translationCore/resources/en/bibles/ult",
  "<HOME_DIR>/translationCore/resources/en/bibles/ust",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationAcademy",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationNotes",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationWords",
  "<HOME_DIR>/translationCore/resources/hbo/bibles/uhb",
  "<HOME_DIR>/translationCore/resources/hi/translationHelps/translationWords",
]
`;

exports[`migrate tCore resources test with t4t - should not delete 1`] = `
Array [
  "<HOME_DIR>/translationCore/resources/en/bibles/t4t",
  "<HOME_DIR>/translationCore/resources/en/bibles/ult",
  "<HOME_DIR>/translationCore/resources/en/bibles/ust",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationAcademy",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationNotes",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationWords",
  "<HOME_DIR>/translationCore/resources/el-x-koine/bibles/ugnt",
  "<HOME_DIR>/translationCore/resources/el-x-koine/translationHelps/translationWords",
  "<HOME_DIR>/translationCore/resources/hbo/bibles/uhb",
  "<HOME_DIR>/translationCore/resources/hi/translationHelps/translationWords",
]
`;

exports[`migrate tCore resources test with t4t and up to date resources - should not delete 1`] = `
Array [
  "<HOME_DIR>/translationCore/resources/el-x-koine/bibles/ugnt",
  "<HOME_DIR>/translationCore/resources/el-x-koine/translationHelps/translationWords",
  "<HOME_DIR>/translationCore/resources/en/bibles/ult",
  "<HOME_DIR>/translationCore/resources/en/bibles/ust",
  "<HOME_DIR>/translationCore/resources/en/bibles/t4t",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationAcademy",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationNotes",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationWords",
  "<HOME_DIR>/translationCore/resources/hbo/bibles/uhb",
  "<HOME_DIR>/translationCore/resources/hi/translationHelps/translationWords",
]
`;

exports[`migrate tCore resources test with t4t, old resources and not up to date resources - should remove old helps and keep old bibles 1`] = `
Array [
  "<HOME_DIR>/translationCore/resources/el-x-koine/bibles/ugnt",
  "<HOME_DIR>/translationCore/resources/el-x-koine/translationHelps/translationWords",
  "<HOME_DIR>/translationCore/resources/en/bibles/ult",
  "<HOME_DIR>/translationCore/resources/en/bibles/ust",
  "<HOME_DIR>/translationCore/resources/en/bibles/t4t",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationAcademy",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationNotes",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationWords",
  "<HOME_DIR>/translationCore/resources/hbo/bibles/uhb",
  "<HOME_DIR>/translationCore/resources/hi/translationHelps/translationWords",
]
`;

exports[`migrate tCore resources test with t4t, old resources and up to date resources - should not delete anything 1`] = `
Array [
  "<HOME_DIR>/translationCore/resources/el-x-koine/bibles/ugnt",
  "<HOME_DIR>/translationCore/resources/el-x-koine/translationHelps/translationWords",
  "<HOME_DIR>/translationCore/resources/en/bibles/ult",
  "<HOME_DIR>/translationCore/resources/en/bibles/ust",
  "<HOME_DIR>/translationCore/resources/en/bibles/t4t",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationAcademy",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationNotes",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationWords",
  "<HOME_DIR>/translationCore/resources/hbo/bibles/uhb",
  "<HOME_DIR>/translationCore/resources/hi/translationHelps/translationWords",
  "<HOME_DIR>/translationCore/resources/x-test/translationHelps/translationWords",
]
`;

exports[`migrate tCore resources test with t4t, old resources and up to date resources - should not delete anything 2`] = `
Array [
  "<HOME_DIR>/translationCore/resources/el-x-koine/bibles/ugnt",
  "<HOME_DIR>/translationCore/resources/el-x-koine/translationHelps/translationWords",
  "<HOME_DIR>/translationCore/resources/en/bibles/ult",
  "<HOME_DIR>/translationCore/resources/en/bibles/ust",
  "<HOME_DIR>/translationCore/resources/en/bibles/t4t",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationAcademy",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationNotes",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationWords",
  "<HOME_DIR>/translationCore/resources/hbo/bibles/uhb",
  "<HOME_DIR>/translationCore/resources/hi/translationHelps/translationWords",
  "<HOME_DIR>/translationCore/resources/x-test/translationHelps/translationWords",
]
`;

exports[`migrate tCore resources test with t4t, old resources, up to date resources and different app version - should remove old helps and keep old bibles 1`] = `
Array [
  "<HOME_DIR>/translationCore/resources/el-x-koine/bibles/ugnt",
  "<HOME_DIR>/translationCore/resources/el-x-koine/translationHelps/translationWords",
  "<HOME_DIR>/translationCore/resources/en/bibles/ult",
  "<HOME_DIR>/translationCore/resources/en/bibles/ust",
  "<HOME_DIR>/translationCore/resources/en/bibles/t4t",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationAcademy",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationNotes",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationWords",
  "<HOME_DIR>/translationCore/resources/hbo/bibles/uhb",
  "<HOME_DIR>/translationCore/resources/hi/translationHelps/translationWords",
]
`;
